 * Fix: Wagtail's UserProfile model now sets a related_name of ``wagtail_userprofile`` to avoid naming collisions with other user profile models (Matt Westcott)
 * Fix: Non-text content is now preserved when adding or editing a link within rich text (Matt Westcott)
 * Fix: Fixed preview when `SECURE_SSL_REDIRECT = True` (Aymeric Augustin)


1.6.3 (30.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Restore compatibility with django-debug-toolbar 1.5 (Matt Westcott)
 * Fix: Edits to StreamFields are no longer ignored in page edits on Django >=1.10.1 when a default value exists (Matt Westcott)


1.6.2 (02.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Initial values of checkboxes on group permission edit form now are visible on Django 1.10 (Matt Westcott)


1.6.1 (26.08.2016)
~~~~~~~~~~~~~~~~~~

 * Added ``WAGTAIL_ALLOW_UNICODE_SLUGS`` setting to make Unicode support optional in page slugs (Matt Westcott)
 * Fix: Wagtail's middleware classes are now compatible with Django 1.10's new-style middleware (Karl Hobley)
 * Fix: The `Pages.can_create_at` method is now checked in the create page view (Mikalai Radchuk)
 * Fix: Fixed regression on Django 1.10.1 causing Page subclasses to fail to use PageManager (Matt Westcott)
 * Fix: ChoiceBlocks with lazy translations as option labels no longer break Elasticsearch indexing (Matt Westcott)
 * Fix: The page editor no longer fails to load JavaScript files with ``ManifestStaticFilesStorage`` (Matt Westcott)
 * Fix: Django 1.10 enables client-side validation for all forms by default, but it fails to handle all the nuances of how forms are used in Wagtail. The client-side validation has been disabled for the Wagtail UI (Matt Westcott)


1.6 (15.08.2016)
~~~~~~~~~~~~~~~~

 * Django 1.10 support
 * Added the ``include_block`` template tag for improved StreamField template inclusion (Matt Westcott, Mikalai Radchuk)
 * Page slugs now allow unicode on Django >= 1.9 (Behzad Nategh)