@@ -492,3 +492,35 @@ class TestIssue312(TestCase):
             height=rend1.height,
             focal_point_key=rend1.focal_point_key,
         )
+
+
+class TestFilenameReduction(TestCase):
+    """
+    This tests for a bug which results in filenames without extensions
+    causing an infinite loop
+    """
+    def test_filename_reduction_no_ext(self):
+        # Create an image with a big filename and no extension
+        image = Image.objects.create(
+            title="Test image",
+            file=get_test_image_file(
+                'thisisaverylongfilename-abcdefghijklmnopqrstuvwxyz-supercalifragilisticexpialidocioussuperlong'
+            )
+        )
+
+        # Saving file will result in infinite loop when bug is present
+        image.save()
+        self.assertEqual("original_images/thisisaverylongfilename-abcdefghijklmnopqrstuvwxyz-supercalifragilisticexpiali", image.file.name)
+
+    # Test for happy path. Long filename with extension
+    def test_filename_reduction_ext(self):
+        # Create an image with a big filename and extensions
+        image = Image.objects.create(
+            title="Test image",
+            file=get_test_image_file(
+                'thisisaverylongfilename-abcdefghijklmnopqrstuvwxyz-supercalifragilisticexpialidocioussuperlong.png'
+            )
+        )
+
+        image.save()
+        self.assertEqual("original_images/thisisaverylongfilename-abcdefghijklmnopqrstuvwxyz-supercalifragilisticexp.png", image.file.name)
